src/common/styles.css
/* ... */
/* BACK TO TOP BUTTON */
/* ------------------------------------------------------- */
#back-to-top-link {
  position: fixed;
  bottom: 5rem;
  right: 10rem;
  padding: 6px 12px;
  background: var(--blue);
  color: var(--white);
  transform: translateY(-50%);
  transition: opacity 200ms ease-out, color 200ms ease-out,
    background 200ms ease-out;
  opacity: 0;
  pointer-events: none;
}

#back-to-top-link.show {
  opacity: 1;
  pointer-events: all;
}

#back-to-top-link:hover {
  background: var(--purple);
}

#back-to-top-link:focus {
  outline: none;
  box-shadow: 0 0 0 3px var(--white), 0 0 0 6px var(--green);
  border: 0;
}

/* SHARING INFO & CODE INFO */
/* ------------------------------------------------------- */
.sharing-info,
.code-info {
  width: 50%;
  font-size: 16px;
  line-height: 20px;
}

.code-info {
  color: var(--white);
}

.code-info h2,
.sharing-info h2 {
  font-weight: bold;
  font-size: 24px;
  line-height: 24px;
  margin: 0 0 16px;
}

.code-links,
.sharing-links {
  margin-top: 16px;
  display: flex;
  flex-wrap: wrap;
  gap: 2rem;
}

.code-section {
  position: relative;
  z-index: 0;
}

.code-example {
  width: calc(50% - 24px - 12rem);
  font-family: var(--font-monospace);
  color: var(--white);
  position: absolute;
  bottom: 0;
  right: 10rem;
  overflow: hidden;
}

@media screen and (min-width: 640px) {
  .code-example {
    right: 12rem;
  }
}

@media screen and (min-width: 900px) {
  .code-example {
    right: 14rem;
  }
}

@media screen and (min-width: 1024px) {
  .code-example {
    right: 16rem;
  }
}

.code-example code.hljs {
  overflow: hidden;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  background: var(--black);
  font-family: var(--font-monospace);
  float: left;
  width: 100%;
  user-select: none;
  position: relative;
  z-index: 2;
}

.code-halo {
  position: absolute;
  border-top-left-radius: 100%;
  border-top-right-radius: 100%;
  background: var(--green);
  box-shadow: 0 0 200px var(--green);
  z-index: 1;
  color: var(--green);
  left: 50%;
  bottom: 0;
  transform: translateX(-50%);
  width: calc(100% - 24rem);
  height: 80px;
}

@media screen and (min-width: 741px) {
  .code-halo {
    left: auto;
    right: 12rem;
    width: calc(50% - 24px - 12rem);
    height: 150px;
    transform: none;
  }
}

@media screen and (min-width: 901px) {
  .code-halo {
    right: 14rem;
  }
}

@media screen and (min-width: 1024px) {
  .code-halo {
    right: 16rem;
  }
}

@media screen and (max-width: 740px) {
  .sharing-info,
  .code-info {
    width: 100%;
  }
  .code-section > .container {
    padding-bottom: 0;
  }

  .code-example {
    position: relative;
    width: 100%;
    margin: 4rem 12rem 0;
    top: 0;
    height: 150px;
  }
}

/* SOCIAL BUTTON CSS */
/* ------------------------------------------------------- */
.code-info .share-btn,
.sharing-info .share-btn {
  display: inline-block;
  padding: 0.4em 0.6em 0.3em;
  text-decoration: none;
  outline: none;
  text-align: center;
  margin: 0;
  transition: all 200ms ease-out;
  font-size: 14px;
}

.code-info .share-btn:hover,
.sharing-info .share-btn {
  color: var(--purple);
  border: 1px solid var(--purple);
}

.code-info .share-btn,
.sharing-info .share-btn:hover {
  color: var(--green);
  border: 1px solid var(--green);
}

.share-btn:focus,
.share-btn:hover {
  color: var(--blue);
  border: 1px solid var(--green);
  text-decoration: none;
  opacity: 0.8;
}

.share-btn:active {
  color: #e2e2e2;
}

/* FINANCE */
/* ------------------------------------------------------- */
.finance {
  background: var(--white);
  position: relative;
  z-index: 1;
}

.finance > ul {
  display: flex;
  flex-wrap: wrap;
  gap: 10rem;
}

.finance > ul > li {
  display: flex;
  flex-direction: column;
  font-size: 3.5rem;
  color: var(--gray-700);
  gap: 4rem;
}

.finance > ul > li img {
  height: 10rem;
}

/* CREDITS */
/* ------------------------------------------------------- */
.credits {
  background: var(--gray-50);
}

.credits .container {
  padding-top: 6rem;
  padding-bottom: 6rem;
  color: var(--gray-500);
  font-size: 3.5rem;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

.credits .links {
  display: flex;
  flex-wrap: wrap;
  gap: 4rem;
}

.credits a {
  color: var(--gray-500);
}

.credits a:hover {
  color: var(--blue);
}

/* STORIES LIST */
/* ------------------------------------------------------- */
article a.stories-list-item {
  display: block;
  text-decoration: none;
  position: relative;
  transition: border 200ms ease-out, box-shadow 200ms ease-out,
    color 200ms ease-out;
  padding: 0;
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 240px auto;
  border: 1px solid var(--gray-200);
  box-shadow: 0 4px 0 var(--gray-50);
  margin-bottom: 10rem;
}

article a.stories-list-item:hover {
  border-color: var(--purple);
  box-shadow: 0 4px 0 var(--purple);
}

article .stories-list-item-content > * {
  transition: color 200ms ease-out;
}

article a.stories-list-item:hover .stories-list-item-content > * {
  color: var(--purple);
}

article .stories-list-item-cover {
  position: relative;
}

article .stories-list-item-cover > img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  margin: 0;
}

article .stories-list-item-cover:before {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  background: var(--purple);
  mix-blend-mode: color;
  z-index: 2;
}

article .stories-list-item-content {
  padding: 10rem;
  color: var(--black);
  font-size: 100%;
}

article h3.stories-list-item-title {
  font-size: 150%;
  line-height: 120%;
  margin: 0 0 2rem 0;
}

article p.stories-list-item-publication-info {
  display: flex;
  column-gap: 3rem;
  flex-wrap: wrap;
}

article span.stories-list-item-profile-name {
  display: flex;
  gap: 1.5rem;
}

article span.stories-list-item-profile-name > img {
  margin: 0;
}
/* ... */

